--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =https://leechoontay-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1n5v2e19i90y.us-south.codeengine.appdomain.cloud
+backend_url = <BASE_URL>
+sentiment_analyzer_url = <SENTIMENT_ANALYZER_URL>
