--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "env": {
-      "es6": true
-    },
-    "parserOptions": {
-      "ecmaVersion": 6
-    }
+  "jshintConfig": {
+    "esversion": 6
   },
   "author": "",
   "license": "ISC"
